# agromatic

./: README.md  cassetta.dae
agromatic_gazebo/: CMakeLists.txt  package.xml
agromatic_gazebo/launch/: husky_sim.launch  husky_sim_dynamic.launch  husky_sim_water_tank.launch
agromatic_gazebo/worlds/: actor_collisions.world  dinamico.world  mondo_campo_water_tank.world  mondo_dynamic.world  prova_mondo.world
cpr_gazebo/cpr_agriculture_gazebo/launch/: husky_sim_dynamic.launch  prova_mia.launch  spawn_husky.launch
cpr_gazebo/cpr_agriculture_gazebo/worlds/: actually_empty_world.world  campo.world  campo_pomodori.world  dinamico.world  mondo.world  mondo2.world  mondo3.world  mondo_dynamic.world
fields-ignition/fields_ignition/scripts/: tomato_gen.ipynb
husky/husky_control/launch/: control_water_tank.launch  teleop.launch
husky_customization/husky_custom_description/: package.xml
models/tomato_0/: Fruit1.sdf  model.sdf
models/tomato_fruit/: model.config  model.sdf
models/water_tank/: model.config  model.sdf
sending_goals/: CMakeLists.txt  package.xml
sending_goals/map/: map.yaml
sending_goals/pose/: poses.json  poses.txt  poses_old.json
sending_goals/src/: counter.py  counter_prova.py  goal_reached.py  goalswithtimer.py  move_base_status.py  prova.py  salva_punti.py  sending_goals2.py  sending_goals_gianluca.py  sending_goals_timer.py  sending_goals_timer_node.py  sg_spawn_tomato.py  sg_spawn_tomato_node.py  weight_update.py
sending_goals_msgs/: CMakeLists.txt  package.xml
sending_goals_msgs/msg/: Counter.msg  Weight.msg
(+33 files in other folders)
